--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -1,7 +1,14 @@
 {
+  "type": "module",
+  "scripts": {
+    "start": "nodemon index.js"
+  },
   "dependencies": {
+    "axios": "^1.7.5",
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "crypto-js": "^4.2.0",
+    "express": "^4.19.2",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
