--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -4,6 +4,11 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.5",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
