--- a/vite-project/frontend/package.json
+++ b/vite-project/frontend/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.0.0",
     "@mui/material": "^6.0.0",
+    "axios": "^1.7.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwindcss-animated": "^1.1.2"
